# java-lesson

./: .gitignore  Test.puml  pom.xml  testNG.xml
cpp/: 1.cpp  CMakeLists.txt  Macros.hpp
cpp/access/: Ac.cpp  Ac.hpp
cpp/cicle/: Whl.cpp  Whl.hpp
cpp/clazz/: Clazz.hpp
cpp/helper/: Macros.hpp
cpp/helper/impl/: JObject.cpp  JObject.hpp  JString.cpp  JString.hpp
cpp/homework/: HW1.cpp  HW1.hpp
cpp/oop/access/: A.cpp  A.hpp  D.cpp  D.hpp
cpp/oop/access/lvl/: N.cpp  N.hpp
cpp/oper/: Operation.cpp  Operation.hpp
cpp/start/: Andrei.cpp  Andrei.hpp  DemoStart.cpp  DemoStart.hpp  Main.cpp  Main.hpp
cpp/vars/: DemoVars.cpp  DemoVars.hpp
jni/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lib.c  libmylib.dylib
log/: log.html  output.xml  report.html
nodejs/: node.js  package.json
nodejs/homework/: HW1.java  HW1.js
nodejs/oper/: Operation.js
nodejs/start/: Andrei.js  DemoStart.js  Main.js
nodejs/vars/: DemoVars.js
python/: .gitignore  main.py
python/homework/: HW1.py
python/oper/: Operation.py
python/start/: Andrei.py  DemoStart.py  Main.py
python/vars/: DemoVars.py
src/: map.html
src/access/: Ac.java
src/cicle/: Whl.java
src/clazz/: Car.java  DemoEx.java  Person.java  Point.java  Salariu.java
src/collection/: Main.java  map.html
src/collection/list/: AList.java
src/collection/map/: DemoMap.java
src/collection/set/: DemoSet.java
src/condition/: Ex.java  Ifs.java  Sw.java
src/exception/: AgeLimitException.java  ExMain.java
src/forloop/: ForLoop.java
src/game/: UFO.java
src/graph/: UFO.java
src/homework/: HW1.java  HW2.java  HW3.java  HW4.java  HW5.java  HW6.java  Student.java
src/lamda/: Main.java  Stream.java
src/main/resources/: config.properties
src/method/: Mth.java
src/oop/: Animal.java  BankAccount.java  Bicicle.java  Bus.java  Caine.java  Cat.java  Developer.java  Employee.java  ICalc.java  LicPerson.java  Manager.java  Oop.java  Person.java  Pisica.java  SavingsAccount.java
src/oop/access/: A.java  D.java
src/oop/demo/: Per.java
src/oper/: Operation.java
src/sir/: SIr.java  Sir2D.java
src/start/: DemoGit.java  Main.java
src/test/resources/: config.properties  resource.json
src/vars/: DemoVars.java
src/w3resource/base/: Base1.java  Base2.java  Conditional.java
src/w3resource/collections/: AList.java  Cols.java
(+259 files in other folders)
